--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="D:\AUDRASHF\FILE ZAHWA\browny-v1.0\assets\images\about\IMG_1912.JPG" alt="profile_image">
+								![alt text](https://github.com/audra23/audra/blob/main/assets/images/about/IMG_1912.JPG?raw=true)
 								<div class="about-list-icon">
 									<ul>
 										<li>
