--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								![alt text](https://github.com/audra23/audra/blob/main/assets/images/about/IMG_1912.JPG?raw=true)
+								<img src="https://github.com/audra23/audra/blob/main/assets/images/about/IMG_1912.JPG" alt="profile_image">
+			
 								<div class="about-list-icon">
 									<ul>
 										<li>
